# Snono-ERP

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  pos-fe-base.pro
app/: About.md  CMakeLists.txt  api.cpp  api.h  appqmlnetworkaccessmanagerfactory.h  appsettings.cpp  appsettings.h  authmanager.cpp  authmanager.h  images.qrc  keyemitter.cpp  keyemitter.h  label.html  main.cpp  mainwindow.cpp  mainwindow.ui  pos-fe.pro  posapplication.cpp  posapplication.h  posnetworkmanager.cpp  posnetworkmanager.h  qrc.qrc  receiptgenerator.cpp  receiptgenerator.h  testpalette.h  utils.cpp  utils.h
app/android/: AndroidManifest.xml
app/android/res/drawable/: ic_launcher_foreground.xml
app/gui/: textinputfield.cpp  textinputfield.h
app/gui/delegates/: doublespinboxdelegate.h  spinboxdelegate.h
app/gui/dialogs/: adduserdialog.cpp  adduserdialog.ui  checkablelistdialog.cpp  checkablelistdialog.h  checkablelistdialog.ui  logindialog.h  logindialog.ui  makepaymentdialog.h  makepaymentdialog.ui  networkerrordialog.cpp  networkerrordialog.h  orderdialog.h  orderdialog.ui  producteditdialog.h  receiptdialog.cpp  receiptdialog.ui
app/gui/tabs/: accountingtab.cpp  accountingtab.ui  cashiertab.ui  debugtab.cpp  itemstab.h  itemstab.ui  orderstab.cpp  productstab.cpp  userstab.cpp
app/gui/views/: headerwidget.h  searchheaderview.h  tableview.h
app/icons/: appposfe.rc
app/language/: pos-fe_ar_IQ.qm  pos-fe_ar_IQ.ts
app/libs/QrCodeGenerator/: QrCodeGenerator.pri
app/misc/: PosStyle.css  receipt.qrc  style.css
app/models/: accountsmodel.cpp  accountsmodel.h  acldndmodel.cpp  acldndmodel.h  aclgroupsmodel.cpp  aclgroupsmodel.h  aclitemsmodel.cpp  aclitemsmodel.h  appnetworkedjsonmodel.cpp  appnetworkedjsonmodel.h  barqlocationsmodel.cpp  barqlocationsmodel.h  carriersettlementsmodel.cpp  carriersettlementsmodel.h  cashiermodel.cpp  cashiermodel.h  cataloguesmodel.cpp  cataloguesmodel.h  categoriesmodel.cpp  categoriesmodel.h  checkableaclitemsmodel.cpp  checkableaclitemsmodel.h  customersmodel.cpp  customersmodel.h  customjournalentrymodel.cpp  customjournalentrymodel.h  customvendorcartmodel.cpp  customvendorcartmodel.h  draftorderformmodel.cpp  draftorderformmodel.h  draftordersmodel.cpp  draftordersmodel.h  driversmodel.cpp  driversmodel.h  employeesmodel.cpp  employeesmodel.h  equitymovesmodel.cpp  equitymovesmodel.h  expensesreportmodel.cpp  expensesreportmodel.h  (+104 more)
app/models/charts/: saleschartmodel.cpp  saleschartmodel.h
app/models/jsonModel/: checkablelistmodel.cpp  checkablelistmodel.h  treeproxymodel.cpp  treeproxymodel.h
app/posnumpadwidget/: posnumpad.h  posnumpad.qrc
app/posnumpadwidget/utils/: numbereditor.cpp
app/qml/: AppMainScreen.qml  Nav.qml  Test.qml  TestService.qml  main.qml  nav.js  qtquickcontrols2.conf
app/qml/actions/: ChangeLanguageAction.qml
app/qml/common/: ActionsDelegate.qml  AddressDelegate.qml  AppConfirmationDialog.qml  AppDataPage.qml  AppDelegateChooser.qml  AppDialog.qml  AppDialogFooter.qml  AppFormDialog.qml  AppFormView.qml  AppMapView.qml  AppPage.qml  AppProgressBar.qml  AppToolBar.qml  BasicViewPage.qml  BusySpinner.qml  ButtonPopup.qml  CCheckableFilterComboBox.qml  CFilterComboBox.qml  CFilterMenu.qml  CFormView.qml  CTabFormView.qml  CTabbedFormView.qml  CashierReceiptDialog.qml  CrudViewPage.qml  CurrencyDelegate.qml  DateDelegate.qml  DateTimeDelegate.qml  DnDListView.qml  DownloadProgressBar.qml  ExternalDeliveryStatusDelegate.qml  Form.qml  GridContainer.qml  ImageDelegate.qml  InvoicePaymentStatusDelegate.qml  JournalEntryStatusDelegate.qml  LinkDelegate.qml  LoadingImage.qml  NewReceiptDialog.qml  NumberDelegate.qml  OrderTypeDelegate.qml  (+13 more)
app/qml/common/+android/: CashierReceiptDialog.qml  NewReceiptDialog.qml  ReceiptDialog.qml
app/qml/pages/: LoginPage.qml  ReceiptPage.qml  ServerSettingsDialog.qml
app/qml/pages/Accounting/: AccountForm.qml  AccountsPage.qml  DepositMoneyDialog.qml  InternalTypeDelegate.qml  JournalEntriesItemsPage.qml  JournalEntriesPage.qml  JournalEntryDetailsPage.qml  JournalEntryForm.qml  NewJournalEntryPage.qml  TypeDeleagate.qml
app/qml/pages/PaymentMethod/: PaymentMethodForm.qml  PaymentMethodsPage.qml
app/qml/pages/ProductsDemo/: ProductsDemoPage.qml
app/qml/pages/aclGroups/: AclGroupForm.qml  AclGroupsPage.qml
app/qml/pages/cashier/: BarqLocationsCB.qml  CashierPage.qml  CreditConfirmDialog.qml  NewOnlineOrderPage.qml  Numpad.qml  NumpadButton.qml  PayDialog.qml  ProductPickerDialog.qml
app/qml/pages/catalogues/: CataloguesPage.qml
app/qml/pages/categories/: AddCategoryDialog.qml  CategoriesPage.qml  ProductCategoryForm.qml
app/qml/pages/customers/: AddCustomerDialog.qml  AddCustomerPage.qml  CustomerForm.qml  CustomersBillsPage.qml  CustomersPage.qml  StatusDelegate.qml
app/qml/pages/dashboard/: AppDashboardWidget.qml  DashboardPage.qml  DashboardRowItem.qml  DashboardWidgetTable.qml  NewDashboardWidget.qml
app/qml/pages/delivery/: CarrierSettlementForm.qml  CarrierSettlementsPage.qml  DriverForm.qml  DriverShipmentsMobilePage.qml  DriversPage.qml  MobileShipmentListViewDelegate.qml  ShipmentCarrierForm.qml  ShipmentCarriersPage.qml  ShipmentHandOverPage.qml  ShipmentsPage.qml  UpdateShipmentStatusMobilePage.qml
app/qml/pages/employees/: EmployeeForm.qml  EmployeesPage.qml
app/qml/pages/equity/: EquityMovesPage.qml  OwnerDepositForm.qml  OwnerForm.qml  OwnersPage.qml
app/qml/pages/invoices/: InvoiceDetailsPage.qml  InvoicesPage.qml  NewInvoicePage.qml  PayInvoiceDialog.qml
app/qml/pages/jobtitles/: JobTitleForm.qml  JobTitlesPage.qml
app/qml/pages/locations/: LocationForm.qml  LocationsPage.qml
app/qml/pages/orders/: DeliveryOrderForm.qml  DraftOrderForm.qml  DraftOrdersPage.qml  ExchangeOrderPage.qml  OnlineOrders.qml  OnlineOrdersPage.qml  OrderDetails.qml  OrderDetailsPage.qml  OrderPackingListView.qml  OrderPackingPage.qml  OrderReturnDetailsPage.qml  OrderReturnDialog.qml  OrderReturnListView.qml  OrderStatusDelegate.qml  OrdersFulfillmentPage.qml  OrdersPage.qml  OrdersReturnsPage.qml  (+3 more)
app/qml/screens/: LoginScreen.qml  utils.js
(+329 files in other folders)
